feat: support sql resource type